apps/base/aiostreams/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiostreams
  labels:
    app.kubernetes.io/name: aiostreams
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
